--- a/app/src/main/res/layout/fragment_groups_detail.xml
+++ b/app/src/main/res/layout/fragment_groups_detail.xml
@@ -14,13 +14,15 @@
 
         <TextView
             android:id="@+id/txtGroupName"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
+            android:layout_width="215dp"
+            android:layout_height="49dp"
             android:layout_marginTop="36dp"
             android:capitalize="characters"
             android:gravity="center"
             android:text="@string/hello_blank_fragment"
+            android:textAllCaps="true"
             android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.504"
             app:layout_constraintStart_toStartOf="parent"
@@ -30,56 +32,46 @@
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="80dp"
+            android:layout_marginBottom="64dp"
             android:text="@string/join_group"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.504"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/SignalerName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="80dp"
-            android:layout_marginTop="44dp"
-            android:text="Some Name"
+            android:layout_marginTop="36dp"
+            android:gravity="center"
+            android:text="Some Signaler Name"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtGroupName" />
-
-        <TextView
-            android:id="@+id/NumMembers"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="5000 members"
-            app:layout_constraintBottom_toBottomOf="@+id/SignalerName"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/SignalerName"
-            app:layout_constraintTop_toTopOf="@+id/SignalerName"
-            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="80dp"
-            android:layout_marginTop="32dp"
-            android:text="TextView"
-            app:layout_constraintBottom_toTopOf="@+id/button"
+            android:layout_marginTop="36dp"
+            android:text="Upvote Count"
+            app:layout_constraintEnd_toStartOf="@+id/textView7"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/SignalerName"
-            app:layout_constraintVertical_bias="0.013" />
+            app:layout_constraintTop_toBottomOf="@+id/SignalerName" />
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="Num Members"
             app:layout_constraintBottom_toBottomOf="@+id/textView6"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.708"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/textView6"
             app:layout_constraintTop_toTopOf="@+id/textView6"
             app:layout_constraintVertical_bias="0.0" />
 
