--- a/app/src/main/res/layout/fragment_modify_watchlist.xml
+++ b/app/src/main/res/layout/fragment_modify_watchlist.xml
@@ -27,13 +27,15 @@
         <Button
             android:id="@+id/aButton"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="18dp"
+            android:layout_height="25dp"
+
+            android:layout_marginLeft="15sp"
+            android:background="@color/active_signal"
+            android:text="@string/authorize_addition"
             android:textColor="@android:color/black"
-            android:text="Authorize Addition"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.066"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
@@ -41,11 +43,11 @@
         <Button
             android:id="@+id/rButton"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="25dp"
             android:layout_marginStart="18dp"
             android:background="@color/expired_signal"
             android:textColor="@android:color/black"
-            android:text="Authorize Removal"
+            android:text="@string/authorize_removal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/aButton"
@@ -56,7 +58,6 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15sp"
@@ -66,22 +67,23 @@
             android:id="@+id/tickerView"
             android:layout_width="90dp"
             android:layout_height="45dp"
-            android:text="Ticker"
+            android:layout_marginLeft="15dp"
+            android:text="@string/ticker"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.049"
+            app:layout_constraintHorizontal_bias="0.054"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.508" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/txtPrice"
             android:layout_width="90dp"
             android:layout_height="45dp"
             android:layout_marginStart="20dp"
-            android:text="Price"
+            android:text="@string/price"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/tickerView"
@@ -92,7 +94,7 @@
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:layout_marginStart="32dp"
-            android:text="Daily Change"
+            android:text="@string/daily_change"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/txtPrice"
