--- a/app/src/main/res/layout/fragment_groups_detail.xml
+++ b/app/src/main/res/layout/fragment_groups_detail.xml
@@ -10,18 +10,19 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fadingEdge="horizontal|vertical">
 
         <TextView
             android:id="@+id/txtGroupName"
-            android:layout_width="215dp"
-            android:layout_height="49dp"
+            android:layout_width="270dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
             android:capitalize="characters"
-            android:gravity="center"
+            android:gravity="center|center_vertical"
             android:text="@string/hello_blank_fragment"
             android:textAllCaps="true"
-            android:textSize="20sp"
+            android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.504"
@@ -29,7 +30,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/joinGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="64dp"
@@ -53,27 +54,46 @@
             app:layout_constraintTop_toBottomOf="@+id/txtGroupName" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/textView_members"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
-            android:text="Upvote Count"
-            app:layout_constraintEnd_toStartOf="@+id/textView7"
-            app:layout_constraintHorizontal_bias="0.5"
+            android:layout_marginStart="56dp"
+            android:layout_marginTop="44dp"
+            android:text="Number of memebers:"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/SignalerName" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/numMembers"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Num Members"
-            app:layout_constraintBottom_toBottomOf="@+id/textView6"
+            app:layout_constraintBottom_toBottomOf="@+id/textView_members"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView6"
-            app:layout_constraintTop_toTopOf="@+id/textView6"
+            app:layout_constraintHorizontal_bias="0.811"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textView_members"
             app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/textView_rating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="56dp"
+            android:layout_marginTop="36dp"
+            android:text="Rating Score:"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_members" />
+
+        <TextView
+            android:id="@+id/rating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="9999"
+            app:layout_constraintBottom_toBottomOf="@+id/textView_rating"
+            app:layout_constraintStart_toStartOf="@+id/numMembers"
+            app:layout_constraintTop_toTopOf="@+id/textView_rating"
+            app:layout_constraintVertical_bias="1.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
