--- a/app/src/main/res/layout/watch_list_item.xml
+++ b/app/src/main/res/layout/watch_list_item.xml
@@ -12,6 +12,7 @@
         android:layout_height="45dp"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:layout_marginLeft="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.049"
