added signals count

--- a/app/src/main/res/layout/fragment_groups_detail.xml
+++ b/app/src/main/res/layout/fragment_groups_detail.xml
@@ -33,11 +33,11 @@
             android:id="@+id/joinGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="64dp"
+            android:layout_marginBottom="32dp"
             android:text="@string/join_group"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.504"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
@@ -59,7 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="56dp"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="40dp"
             android:text="Number of memebers:"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/SignalerName" />
@@ -81,16 +81,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="56dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="20dp"
             android:text="Rating Score:"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_members" />
+            app:layout_constraintTop_toBottomOf="@+id/performance" />
 
         <TextView
             android:id="@+id/rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="9999"
+            android:text="999"
             app:layout_constraintBottom_toBottomOf="@+id/textView_rating"
             app:layout_constraintStart_toStartOf="@+id/numMembers"
             app:layout_constraintTop_toTopOf="@+id/textView_rating"
@@ -101,7 +101,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="40dp"
             android:drawableLeft="?android:attr/actionModeFindDrawable"
             android:fontFamily="sans-serif-condensed"
             android:gravity="center_vertical"
@@ -117,7 +117,7 @@
             android:layout_marginTop="32dp"
             android:text="Excellent Signals Count:"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/performance" />
+            app:layout_constraintTop_toBottomOf="@+id/textView_numSignals" />
 
         <TextView
             android:id="@+id/textView_goodSignals2"
@@ -152,10 +152,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="56dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="36dp"
             android:text="Established: "
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_rating" />
+            app:layout_constraintTop_toBottomOf="@+id/textView_members" />
 
         <TextView
             android:id="@+id/age"
@@ -165,6 +165,25 @@
             app:layout_constraintBottom_toBottomOf="@+id/textView_age"
             app:layout_constraintStart_toStartOf="@+id/rating"
             app:layout_constraintTop_toTopOf="@+id/textView_age" />
+
+        <TextView
+            android:id="@+id/textView_numSignals"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="56dp"
+            android:layout_marginTop="32dp"
+            android:text="Total Signals Sent:"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_rating" />
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="000"
+            app:layout_constraintBottom_toBottomOf="@+id/textView_numSignals"
+            app:layout_constraintStart_toStartOf="@+id/rating"
+            app:layout_constraintTop_toTopOf="@+id/textView_numSignals" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
