--- a/app/src/main/res/layout/fragment_groups_detail.xml
+++ b/app/src/main/res/layout/fragment_groups_detail.xml
@@ -177,7 +177,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView_rating" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/signalsCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="000"
