--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,7 +38,7 @@
                 android:id="@+id/tickerView"
                 android:layout_width="90dp"
                 android:layout_height="45dp"
-                android:text="Ticker"
+                android:text="@string/ticker"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -53,7 +53,7 @@
                 android:layout_width="90dp"
                 android:layout_height="45dp"
                 android:layout_marginStart="20dp"
-                android:text="Price"
+                android:text="@string/price"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/tickerView"
@@ -63,8 +63,8 @@
                 android:id="@+id/txtChange"
                 android:layout_width="wrap_content"
                 android:layout_height="45dp"
-                android:layout_marginStart="32dp"
-                android:text="Daily Change"
+                android:layout_marginStart="15dp"
+                android:text="@string/daily_change"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/txtPrice"
@@ -73,9 +73,9 @@
 
         <ListView
             android:id="@+id/listViewObject"
-            android:layout_width="377dp"
+            android:layout_width="match_parent"
             android:layout_height="375dp"
-            android:layout_marginLeft="15sp"
+            android:padding="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
