--- a/app/src/main/res/layout/fragment_modify_watchlist.xml
+++ b/app/src/main/res/layout/fragment_modify_watchlist.xml
@@ -111,7 +111,6 @@
         android:layout_margin="7.5dp"
         android:layout_marginLeft="15sp"
         android:layout_marginRight="15sp"
-        android:layout_weight="1"
-        android:background="@color/other_message" />
+        android:layout_weight="1" />
 
 </LinearLayout>
