--- a/app/src/main/res/layout/fragment_signal_display.xml
+++ b/app/src/main/res/layout/fragment_signal_display.xml
@@ -12,7 +12,8 @@
         android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:layout_marginBottom="10dp"/>
 
     <LinearLayout
         android:id="@+id/layout"
