--- a/app/src/main/res/layout/fragment_groups_detail.xml
+++ b/app/src/main/res/layout/fragment_groups_detail.xml
@@ -18,7 +18,6 @@
             android:layout_width="270dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
-            android:capitalize="characters"
             android:gravity="center|center_vertical"
             android:text="@string/hello_blank_fragment"
             android:textAllCaps="true"
@@ -60,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="56dp"
             android:layout_marginTop="40dp"
-            android:text="Number of memebers:"
+            android:text="@string/number_of_members"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/SignalerName" />
 
@@ -82,7 +81,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="56dp"
             android:layout_marginTop="20dp"
-            android:text="Rating Score:"
+            android:text="@string/rating_score"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/performance" />
 
@@ -105,7 +104,7 @@
             android:drawableLeft="?android:attr/actionModeFindDrawable"
             android:fontFamily="sans-serif-condensed"
             android:gravity="center_vertical"
-            android:text="PERFORMANCE"
+            android:text="@string/performance"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView_age" />
 
@@ -115,7 +114,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="56dp"
             android:layout_marginTop="32dp"
-            android:text="Excellent Signals Count:"
+            android:text="@string/excellent_signals_count"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView_numSignals" />
 
@@ -125,7 +124,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="56dp"
             android:layout_marginTop="32dp"
-            android:text="Profitable Signals Count:"
+            android:text="@string/profitable_signals_count"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView_goodSignals" />
 
@@ -162,6 +161,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0/0/0000"
+            android:gravity="center_horizontal"
             app:layout_constraintBottom_toBottomOf="@+id/textView_age"
             app:layout_constraintStart_toStartOf="@+id/rating"
             app:layout_constraintTop_toTopOf="@+id/textView_age" />
