--- a/app/src/main/res/layout/fragment_modify_watchlist.xml
+++ b/app/src/main/res/layout/fragment_modify_watchlist.xml
@@ -30,7 +30,7 @@
             android:id="@+id/aButton"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
-            android:layout_marginLeft="15sp"
+            android:layout_marginStart="15sp"
             android:background="@color/active_signal"
             android:text="@string/authorize_addition"
             android:textColor="@android:color/black"
@@ -69,7 +69,7 @@
             android:id="@+id/tickerView"
             android:layout_width="90dp"
             android:layout_height="45dp"
-            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:text="@string/ticker"
             android:textSize="20sp"
             android:textStyle="bold"
