--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -50,9 +50,9 @@
 
         <Button
             android:id="@+id/btnlogout"
-            android:layout_width="match_parent"
-            android:layout_marginTop="20dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:text="@string/logout" />
 
     </LinearLayout>
